--- a/HOMEP.html
+++ b/HOMEP.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>tipstoincludeyourselfinyourcommunity.com</title>
-	<link rel="stylesheet" type="text/css" href="CSS/STYLEWEB.css">
+	<link rel="stylesheet" type="text/css" href="CSS/STYLE.css">
 </head>
 
 <div class="header">
