Update Home page - Chantal.html

--- a/Home page - Chantal.html
+++ b/Home page - Chantal.html
@@ -19,7 +19,7 @@
 
 </div>
 <h1 style="color: white; font-size: 40px; margin-top: 40px; margin-bottom: 0px; padding-bottom: 0px"> Welcome to the home page!  ↓↓↓</h1>
-<img src="golf.png" style="float: right; width: 700px; height: 700px; padding: 0px" >
+<img src="golf.PNG" style="float: right; width: 700px; height: 700px; padding: 0px" >
 <div class="two">
 <p align="justify" style="font-size: 35px; margin: 10px; line-height: 45px; padding-top: 0px"> <BR CLEAR=”left”/> This is the home page, here you can find a little intro to the website itself and its purpose. The reasons why the website was created are much more in detail on the “My Story” page, however, the overall idea is the following. To simply help people that feel excluded from their communities now that we all have had to accommodate to this new online lifestyle for both work and school. It can also help people that find it difficult to include themselves in general, this could be in  conversations, friend groups, discussions, school, etc. On this website, you will find tips on how to include yourself in these situations so that the overall result you get is the feeling of inclusion in your community or communities. </p>
 
