--- a/XAVI.html
+++ b/XAVI.html
@@ -19,7 +19,7 @@
 
 </div>
 <h1 style="color: white; font-size: 40px; margin-top: 40px; margin-bottom: 0px; padding-bottom: 0px"> Welcome to the Xavi page!  ↓↓↓</h1>
-<img src="lion89.png" style="float: right; width: 550px; height: 500px; padding: 30px" >
+<img src="lion89.PNG" style="float: right; width: 550px; height: 500px; padding: 30px" >
 <div class="two">
 <p align="justify" style="font-size: 35px; margin: 10px; line-height: 45px; padding-top: 0px"> <BR CLEAR=”left”/> Xavi Is the website mascot he can help you calm down if you're feeling anxious or stressed and can lead you to a video or breathing exercises that will hopefully come in handy in order to calm you down in order for you to reduce your stress and/or anxiety. This will hopefully help you feel more comfortable with yourself which will potentially be able to allow you to communicate with other people, there for making you feel more included in your community or more included in a conversation as you will be more confident with yourself. </p>
 
